--- a/exercicio.html
+++ b/exercicio.html
@@ -11,11 +11,13 @@
     <H2> Insira os dados para cadastrar</H2>
     <form> 
         <label for="email">Email:</label>
-        <input style="text-align: center;" type="email" id="email" placeholder="Digite seu email"/><br>
-        <label  for="name"> Nome:</label>
+        <input style="text-align: center;" type="email" id="email" placeholder="digite seu email"/><br>
+        <label for="password"> Senha:</label>
+        <input style="text-align: center;"type="password" id="password" placeholder="digite sua senha"><br>
+        <label for="name"> Nome:</label>
         <input style="text-align: center;" type="text" id="name" placeholder="digite seu nome"/><br>
-        <label for="tel">Telefone:</label>
-        <input style="text-align: center;" type="tel" id="tel" placeholder="Numero de telefone"/><br><br>
+        <label for="tel">Phone:</label>
+        <input style="text-align: center;" type="tel" id="tel" placeholder="numero de telefone"/><br><br>
         <label >Escolha o Motor do carro </label>
         <select>
             <option> 1.0</option>
